src/test/resources/semantic/sentences/correct/TC_ASIGNATION.ru
struct A{
    B b;
    Int a;
    Array Int arrInt;
}

impl A{
    .(){
        (nil);
        ("false");
        b.num=1;
        a=++1;
        arrInt[0]=0;
    }
}
struct B{
    Int num;
}

impl B{
    .(){}
}
start{
}
