src/test/resources/semantic/sentences/error/TC_ERROR_CONDITIONAL2.ru
struct A{
    Int a;
    Bool boolean;
    B b;
}

impl A{
    .(){
        (nil);
        ("false");
        a=1;

    }
    fn m1(Int c)->void{
        if (c.m5()){                /? identificador c no definido
            b.check=true;
            boolean = ++1 >=3;
        }else{
            if(true){

            }else{
                if(b.m2()){

                }
            }
        }
    }
}

struct B{
    Bool check;
}

impl B{
    .(){
        
    }
    fn m1()->Bool{
        ret true;
    }

    fn m2()->Bool{
        ret false;
    }

}
start{
}
